# Midgard_Actix

./: .env  Cargo.toml  README.md  render.yaml  start_postgres.bat
cron-job/: Cargo.toml
migrations/: 20241129123605_depth_price_history.sql  20241201085054_fetch_state.sql  20241201132357_swaps_history.sql  20241202034714_runepool_history.sql  20241203055508_earning_history.sql
populate/: Cargo.toml
populate/script-1/: Cargo.toml
populate/script-1/src/: main.rs  model.rs
populate/script-2/: Cargo.toml
populate/script-2/src/: main.rs  model.rs
populate/script-3/: Cargo.toml
populate/script-3/src/: main.rs
populate/script-4/: Cargo.toml
populate/script-4/src/: main.rs
populate/src/: lib.rs  main.rs
populate/src/models/: depth_price_history.rs  earnings_history.rs  mod.rs  runepool_history.rs  swaps_history.rs
populate/src/scripts/: cron_job.rs  depth_price_history.rs  earnings_history.rs  mod.rs  runepool_history.rs  swaps_history.rs  utils.rs
server/: Cargo.toml
server/src/: main.rs
server/src/models/: depth_price_history.rs  earnings_history.rs  mod.rs  runepool_history.rs  swap_history.rs
server/src/routes/: depth_price_history.rs  earnings_history.rs  mod.rs  runepool_history.rs  swaps_history.rs  utils.rs
server/src/services/: mod.rs  pagination.rs  query.rs
shared/: cargo.toml
shared/src/: create_pool.rs  lib.rs  migrations.rs
src/: main.rs
src/fetch/: cron_job.rs  depth_price_history.rs  earnings_history.rs  mod.rs  runepool_history.rs  swaps_history.rs  utils.rs
src/models/: depth_price_history.rs  earnings_history.rs  mod.rs  runepool_history.rs  swaps_history.rs  utils.rs
src/routes/: depth_price_history.rs  earnings_history.rs  mod.rs  runepool_history.rs  swaps_history.rs
src/utils/: create_pool.rs  errors.rs  migrations.rs  mod.rs
