[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
populate = { path = "../populate" }
actix-web = "4.9.0"
actix-rt = "2.10.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "macros", "postgres", "chrono"] }
tokio = { version = "1.41.1", features = ["full"] }
chrono = "0.4.38"
rust_decimal = "1.36.0"