[package]
name = "script-2"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../../shared" }
serde = {version = "1.0.215", features = ["derive"]}
serde_json = "1.0"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
chrono = "0.4.38"
sqlx = {version = "0.8.2", features = ["runtime-tokio-rustls", "macros", "postgres", "bigdecimal"]}
tokio = {version ="1.41.1", features = ["full"]}
bigdecimal = "0.4.6"